--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Animation\packages.config" />
+  <repository path="..\Atlas\packages.config" />
   <repository path="..\Content.Pipeline\AnimationImporter\packages.config" />
+  <repository path="..\Content.Pipeline\AtlasImporter\packages.config" />
   <repository path="..\Content.Pipeline\DDSImporter\packages.config" />
   <repository path="..\Content.Pipeline\GraphicsImporters\packages.config" />
   <repository path="..\Content.Pipeline\RawModelProcessor\packages.config" />
